--- a/build.gradle
+++ b/build.gradle
@@ -22,13 +22,13 @@ allprojects {
 	apply plugin: 'idea'
 }
 
-def SPRING_CLOUD_VERSION = '1.0.2.RELEASE'
+def SPRING_CLOUD_VERSION = 'Angel.SR6'
 
 subprojects {
 	apply plugin: 'java'
 
-	sourceCompatibility = JavaVersion.VERSION_1_7
-	targetCompatibility = JavaVersion.VERSION_1_7
+	sourceCompatibility = JavaVersion.VERSION_1_8
+	targetCompatibility = JavaVersion.VERSION_1_8
 }
 
 project(':eurekaServer') {
@@ -36,7 +36,7 @@ project(':eurekaServer') {
 
 	dependencies {
 		compile 'org.springframework.cloud:spring-cloud-starter-parent:' + SPRING_CLOUD_VERSION
-		compile("org.springframework.cloud:spring-cloud-starter-eureka-server:" + SPRING_CLOUD_VERSION) {
+		compile("org.springframework.cloud:spring-cloud-starter-eureka-server:1.0.6.RELEASE") {
 			exclude group: "javax.servlet", module: "servlet-api"
 		}
 		compile 'org.springframework.boot:spring-boot-starter-actuator'
@@ -60,10 +60,10 @@ project(':configServer') {
 
 	dependencies {
 		compile 'org.springframework.boot:spring-boot-starter-web'
-		compile 'org.springframework.cloud:spring-cloud-config-server:' + SPRING_CLOUD_VERSION
+		compile 'org.springframework.cloud:spring-cloud-config-server:1.0.4.RELEASE'
 		compile 'com.sun.jersey:jersey-core:1.13'
 		compile 'org.springframework.cloud:spring-cloud-starter-parent:' + SPRING_CLOUD_VERSION
-		compile 'org.springframework.cloud:spring-cloud-starter-eureka:' + SPRING_CLOUD_VERSION
+		compile 'org.springframework.cloud:spring-cloud-starter-eureka:1.0.6.RELEASE'
 		compile 'org.springframework.cloud:spring-cloud-starter-bus-amqp:1.0.3.RELEASE'
 		compile 'org.springframework.boot:spring-boot-starter-actuator'
 
@@ -83,9 +83,9 @@ project(':serviceA') {
 		compile 'org.springframework.boot:spring-boot-starter-web'
 		compile 'com.sun.jersey:jersey-core:1.13'
 		compile 'org.springframework.cloud:spring-cloud-starter-parent:' + SPRING_CLOUD_VERSION
-		compile 'org.springframework.cloud:spring-cloud-starter-eureka:' + SPRING_CLOUD_VERSION
-		compile 'org.springframework.cloud:spring-cloud-starter-feign:' + SPRING_CLOUD_VERSION
-		compile 'org.springframework.cloud:spring-cloud-config-client:' + SPRING_CLOUD_VERSION
+		compile 'org.springframework.cloud:spring-cloud-starter-eureka:1.0.6.RELEASE'
+		compile 'org.springframework.cloud:spring-cloud-starter-feign:1.0.6.RELEASE'
+		compile 'org.springframework.cloud:spring-cloud-config-client:1.0.4.RELEASE'
 		compile 'org.springframework.cloud:spring-cloud-starter-bus-amqp:1.0.3.RELEASE'
 		compile 'org.springframework.boot:spring-boot-starter-actuator'
 		compile project(':serviceB')
@@ -107,10 +107,10 @@ project(':serviceB') {
 		compile 'org.springframework.boot:spring-boot-starter-web'
 		compile 'com.sun.jersey:jersey-core:1.13'
 		compile 'org.springframework.cloud:spring-cloud-starter-parent:' + SPRING_CLOUD_VERSION
-		compile 'org.springframework.cloud:spring-cloud-starter-eureka:' + SPRING_CLOUD_VERSION
-		compile 'org.springframework.cloud:spring-cloud-starter-feign:' + SPRING_CLOUD_VERSION
-		compile 'org.springframework.cloud:spring-cloud-starter-hystrix-dashboard:' + SPRING_CLOUD_VERSION
-		compile 'org.springframework.cloud:spring-cloud-config-client:' + SPRING_CLOUD_VERSION
+		compile 'org.springframework.cloud:spring-cloud-starter-eureka:1.0.6.RELEASE'
+		compile 'org.springframework.cloud:spring-cloud-starter-feign:1.0.6.RELEASE'
+		compile 'org.springframework.cloud:spring-cloud-starter-hystrix-dashboard:1.0.6.RELEASE'
+		compile 'org.springframework.cloud:spring-cloud-config-client:1.0.4.RELEASE'
 		compile 'org.springframework.cloud:spring-cloud-starter-bus-amqp:1.0.3.RELEASE'
 		compile 'org.springframework.boot:spring-boot-starter-actuator'
 		compile 'com.netflix.hystrix:hystrix-javanica:1.3.17'
