Add hystrix to the readme.  Update ServiceA to sporadically fail (for more interesting demonstration).  Update url to uri to resolve spring cloud config server.

--- a/serviceB/src/main/resources/bootstrap.yml
+++ b/serviceB/src/main/resources/bootstrap.yml
@@ -5,7 +5,7 @@ spring:
     name: serviceB
   cloud:
     config:
-      url: http://configserver:8888
+      uri: http://configserver:8888
   rabbitmq:
     host: rabbitmq
     port: 5672
