--- a/serviceA/src/main/resources/bootstrap.yml
+++ b/serviceA/src/main/resources/bootstrap.yml
@@ -21,3 +21,7 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://eurekaserver:8761/eureka/
+
+management:
+  security:
+    enabled: false
